--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,88 +6,59 @@
         
     </head>
     <body>
-     <!-- Header Section -->
-     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="tweets.html">Tweets</a></li>
-            </ul>
-        </nav>
+      <header>
+        <h1>Your Full Name</h1>
+        <p>Professional Tagline or Statement</p>
     </header>
 
-    <!-- Main Section -->
-    <main>
-        <article>
-            <!-- Main Heading -->
-            <h1>Welcome to My Portfolio</h1>
+    <nav>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-            <!-- Subheading level 2 -->
-            <h2>About Me</h2>
-            <p>I am an enthusiastic developer who loves building web applications and learning new technologies. With a passion for front-end and back-end development, I strive to create user-friendly and efficient web solutions.</p>
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Brief description about yourself. This section should give visitors a clear understanding of who you are and what you do.</p>
+    </section>
 
-            <!-- Subheading level 3 -->
-            <h3>My Journey in Tech</h3>
-            <p>I began my coding journey with basic HTML and CSS, gradually progressing to JavaScript. Over time, I expanded my knowledge into back-end technologies such as Node.js and Express, working on various projects that solve real-world problems.</p>
+    <section id="projects">
+        <h2>Projects</h2>
 
-            <!-- Another paragraph -->
-            <p>Through consistent practice and learning, I have honed my skills in developing responsive and dynamic websites. My current focus is on improving my JavaScript proficiency and exploring more frameworks.</p>
-
-            <!-- Another section with paragraph -->
-            <h2>My Projects</h2>
-            <p>One of my notable projects is an event management platform that allows users to create and manage events seamlessly. Another project is a portfolio platform where users can showcase their skills and experiences.</p>
-
-            <!-- Clickable image -->
-            <h2>ALX Program</h2>
-            <p>I'm currently part of the ALX Software Engineering program, which is enhancing my skills in various technologies.</p>
-            <a href="https://www.alxafrica.com/" target="_blank">
-                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px;">
-            </a>
-
-            <!-- Table Section -->
-            <h2>List of Learners</h2>
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Age</th>
-                        <th>Country</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>John</td>
-                        <td>25</td>
-                        <td>USA</td>
-                    </tr>
-                    <tr>
-                        <td>Emily</td>
-                        <td>28</td>
-                        <td>Canada</td>
-                    </tr>
-                    <tr>
-                        <td>Michael</td>
-                        <td>32</td>
-                        <td>Australia</td>
-                    </tr>
-                    <tr>
-                        <td>Sophia</td>
-                        <td>21</td>
-                        <td>UK</td>
-                    </tr>
-                </tbody>
-            </table>
-
+        <article class="project">
+            <h3>Project Title 1</h3>
+            <p>Description of Project 1. Include key details and features of the project.</p>
+            <a href="https://example.com/project1" target="_blank">View Project</a>
         </article>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
+        <article class="project">
+            <h3>Project Title 2</h3>
+            <p>Description of Project 2. Include key details and features of the project.</p>
+            <a href="https://example.com/project2" target="_blank">View Project</a>
+        </article>
 
-    <!-- Footer Section -->
+        <!-- Add more projects as needed -->
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Information about your background, skills, and hobbies. Share your experiences, qualifications, and what you are passionate about.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>
+            LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a><br>
+            GitHub: <a href="https://github.com/yourusername" target="_blank">GitHub Profile</a>
+        </p>
+    </section>
+
     <footer>
-        <p>Made by <YOUR NAME> - <a href="https://yourlink.com" target="_blank">here</a>.</p>
+        <p>&copy; 2024 Your Full Name</p>
     </footer>
     </body>
 </html>
